full-moon/tests/cases/fail/parser/if-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/if-4
---
error[ast]: unexpected token ``.  (expected `end` to conclude `if`)
  ┌─ source.lua:2:14
  │
2 │ elseif y then
  │              ^


